elastic/es-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ornl
  name: es-client
  labels:
    app: elasticsearch
    role: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      role: client
  template:
    metadata:
      labels:
        app: elasticsearch
        role: client
    spec:
      containers:
      - name: es-client
        image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
        ports:
        - containerPort: 9200
          name: client
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
        - name: storage
          mountPath: /data
        # - name: es-certs
        #   mountPath: /usr/share/elasticsearch/config/certs
        #   readOnly: true
      volumes:
      - name: config
        configMap:
          name: es-client-config
      - name: "storage"
        emptyDir:
          medium: ""
      # - name: es-certs
      #   secret:
      #     secretName: es-client-cert
