elastic/es-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ornl
  name: es-master
  labels:
    app: elasticsearch
    role: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      role: master
  template:
    metadata:
      labels:
        app: elasticsearch
        role: master
    spec:
      containers:
      - name: es-master
        image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
        ports:
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
        - name: storage
          mountPath: /data
      volumes:
      - name: config
        configMap:
          name: es-master-config
      - name: "storage"
        emptyDir:
          medium: ""
