elastic/es-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ornl
  name: es-client
  labels:
    app: elasticsearch
    role: client
spec:
  ports:
  - port: 9200
    name: client
  - port: 9300
    name: transport
  selector:
    app: elasticsearch
    role: client
