elastic/es-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ornl
  name: es-master
  labels:
    app: elasticsearch
    role: master
spec:
  ports:
  - port: 9300
    name: transport
  selector:
    app: elasticsearch
    role: master
